next commit-6 - HashSet_equals